# addheader

./: .gitignore  .pre-commit-hooks.yaml  COPYRIGHT.md  README.md  pyproject.toml  setup.cfg  setup.py
addheader/: add.py
addheader/tests/: test_add.py
