[metadata]
name = addheader
version = 0.2.3
author = The IDAES Project
author_email = dkgunter@Lbl.gov
description = A command to manage a header section for a source code tree
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idaes/addheader
project_urls =
    Bug Tracker = https://github.com/idaes/addheader/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml


[options.entry_points]
console_scripts =
    addheader = addheader.add:main
